[package]
name = "quake"
version = "0.1.0"
authors = ["Matthew Collins <me@thinkof.name>"]
edition = "2024"

[features]
default = [ "vulkan" ]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
byteorder = "1.5.0"
cgmath = "0.18.0"
error-chain = "0.12.4"
winit = "0.30.10"
env_logger = "0.11.8"
shaderc = { version = "0.9.1" }
log = "0.4.27"

[dependencies.gfx-hal]
version = "0.9.0"

[dependencies.gfx-backend-gl]
version = "0.9.0"
# features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.9.0"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.9.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.9.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.9.0"
optional = true
